# call_me_maybe

./: .gitignore  Makefile  README.md  README42_EN.md  README42_FR.md  pyproject.toml
data/input/: function_calling_tests.json
src/: __main__.py
src/algorithm/: calling_llm.py
src/models/: functionModel.py  promptModel.py
src/parsing/: parsing_args.py  parsing_json.py  parsing_name.py
src/utils/: error.py  interrupt.txt
