[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "llm_sdk",
    "mypy>=1.20.0",
    "flake8>=7.3.0",
    "accelerate>=1.13.0",
]
[tool.uv.sources]
llm_sdk = {path="./llm_sdk", editable = true}
